--- a/myApp/src/index.html
+++ b/myApp/src/index.html
@@ -16,6 +16,9 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBEqGiIvVN9bpuK8fhtFRtN0nqyDhVRpBU"
+  type="text/javascript"></script>
+  
 </head>
 
 <body>
